aws/eks/challenge/challenge-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: quote-app
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"  # Specify 'nlb' for Network Load Balancer (ALB default)
    alb.ingress.kubernetes.io/scheme: internet-facing  # Use 'internal' for internal ALB
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: LoadBalancer
  selector:
    app: quote-app
